--- a/core/static/css/base.css
+++ b/core/static/css/base.css
@@ -19,7 +19,7 @@ body {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  background-color: #f8f8f8;
+  background-color: #fff;
 }
 
 /* ESTRUTURA GLOBAL (Header, Main, Footer) */
@@ -46,6 +46,7 @@ body {
   overflow-y: auto;
   width: 100%;
   max-width: 100%;
+  margin-top: 1rem;
 }
 
 .app-navbar {
@@ -110,16 +111,24 @@ body {
 }
 
 .nav-item {
+  flex: 1; 
+  list-style: none; 
+  cursor: pointer; 
+  color: #b0b0b0; 
+  transition: color 0.2s;
+}
+
+.nav-item a {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   gap: 0.25rem;
   padding: 0.5rem 0.75rem;
-  flex: 1;
-  color: #b0b0b0;
-  transition: color 0.2s;
-  cursor: pointer;
+  height: 100%;
+  width: 100%;
+  text-decoration: none;
+  color: inherit;
 }
 
 .nav-item--active {
