--- a/core/templates/core/busca.html
+++ b/core/templates/core/busca.html
@@ -16,11 +16,14 @@
     </div>
     
     <div class="categories">
-        <div class="categories-wrapper">
-            
+        <div class="categories-grid">
+            <img src="{%static 'img/categories/banner-barbearia.svg'%}" alt="barbearia" class="category-img">
+            <img src="{%static 'img/categories/banner-barbearia.svg'%}" alt="barbearia" class="category-img">
+            <img src="{%static 'img/categories/banner-barbearia.svg'%}" alt="barbearia" class="category-img">
+            <img src="{%static 'img/categories/banner-barbearia.svg'%}" alt="barbearia" class="category-img">
+            <img src="{%static 'img/categories/banner-barbearia.svg'%}" alt="barbearia" class="category-img">
+            <img src="{%static 'img/categories/banner-barbearia.svg'%}" alt="barbearia" class="category-img">>
         </div>
     </div>
-
-
 </section>
 {% endblock content %}
