Tela home - Cliente

--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -38,7 +38,7 @@
         <nav>
             <ul class="nav-list">
                 <li class="nav-item nav-item--active">
-                    <a href="{% url 'home'%}">
+                    <a href="{% url 'home-cliente'%}">
                         <img src="{% static 'img/footer-icon/home-ativo.svg' %}" alt="" class="nav-icon">
                         <span class="nav-text">Início</span>
                     </a>
