--- a/core/static/css/busca.css
+++ b/core/static/css/busca.css
@@ -8,7 +8,6 @@
     color: #505050;
 }
 
-/* LAYOUT DA PÁGINA DE BUSCA */
 .search-page-content {
     padding: 0 1rem;
 }
@@ -60,7 +59,7 @@
 
 .categories-grid {
     display: grid;
-    grid-template-columns: repeat(2, 1fr); /* Mínimo 2 por linha */
+    grid-template-columns: repeat(2, 1fr);
     gap: 12px;
     justify-items: center;
     margin: 32px 0;
@@ -80,8 +79,8 @@
 }
 
 .category-img {
-    width: 95%;           /* Ocupa quase toda a coluna */
-    max-width: 500px;     /* Ajuste conforme o tamanho desejado */
+    width: 95%;
+    max-width: 500px;
     height: auto;
     object-fit: cover;
     transition: transform 0.2s;
