--- a/core/templates/core/opcao-cadastro.html
+++ b/core/templates/core/opcao-cadastro.html
@@ -5,38 +5,41 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Opção de Cadastro</title>
-
-    <!-- Fonte Poppins (Google Fonts) -->
+    <title>{% block title %}Escolha uma das opções{% endblock %}</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
-
-    <!-- CSS principal -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    {% block extra_css %}
     <link rel="stylesheet" href="{% static 'css/opcao-cadastro.css' %}?v=3" />
+    {% endblock extra_css %}
   </head>
   <body>
     <a href="#" class="back-button" aria-label="Voltar">
-      <img src="{% static 'img/arrow-left.svg' %}" alt="Voltar">
+      <img src="{% static 'img/arrow-left.svg' %}" alt="Voltar" />
     </a>
 
     <main class="page-wrap">
       <div class="card">
-        <h1 class="card-title">Olá, você deseja<br/>se cadastrar como...</h1>
+        <h1 class="card-title">Olá, você deseja<br />se cadastrar como...</h1>
 
         <div class="options-wrapper">
           <a href="#" class="option-button">
-            <!--<img src="{% static 'img/account_circle.svg' %}" alt="Cliente">-->
             <span>Cliente</span>
           </a>
 
           <a href="#" class="option-button">
-            <!--<img src="{% static 'img/self_care.svg' %}" alt="Prestador">-->
             <span>Prestador de serviço</span>
           </a>
         </div>
 
-        <img class="brand-logo" src="{% static 'img/logo-wonder-white.svg' %}" alt="Logo Wonder">
+        <img
+          class="brand-logo"
+          src="{% static 'img/logo-wonder-white.svg' %}"
+          alt="Logo Wonder"
+        />
       </div>
     </main>
   </body>
