--- a/core/templates/core/login.html
+++ b/core/templates/core/login.html
@@ -30,7 +30,7 @@
     <hr class="divisor">
 
     <p class="link-cadastro">
-        Não tem uma conta? <a href="{% url 'cadastro' %}">Cadastre-se</a>
+        Não tem uma conta? <a href="{% url 'opcoes-cadastro' %}">Cadastre-se</a>
     </p>
 
 </main>
