--- a/core/templates/core/opcao-cadastro.html
+++ b/core/templates/core/opcao-cadastro.html
@@ -26,7 +26,7 @@
         <h1 class="card-title">Olá, você deseja<br />se cadastrar como...</h1>
 
         <div class="options-wrapper">
-          <a href="#" class="option-button">
+          <a href="{% url 'cidade' %}" class="option-button">
             <span>Cliente</span>
           </a>
 
