--- a/core/templates/core/perfil-usuario.html
+++ b/core/templates/core/perfil-usuario.html
@@ -47,7 +47,7 @@
 
     </section>
 
-    <a href="#" class="logout-button">
+    <a href="{% url 'login' %}" class="logout-button">
       <img src="{% static 'img/profile/logout.svg' %}" alt="">
       <span>Sair</span>
     </a>
