--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -44,7 +44,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="{% url 'resultado-busca'%}">
+                    <a href="{% url 'search'%}">
                         <img src="{% static 'img/footer-icon/search.svg' %}" alt="" class="nav-icon">
                         <span class="nav-text">Busca</span>
                     </a>
@@ -55,7 +55,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="#"> <img src="{% static 'img/footer-icon/user.svg' %}" alt="" class="nav-icon">
+                    <a href="{% url 'perfil-usuario' %}"> <img src="{% static 'img/footer-icon/user.svg' %}" alt="" class="nav-icon">
                         <span class="nav-text">Perfil</span>
                     </a>
                 </li>
