--- a/core/templates/core/cidade.html
+++ b/core/templates/core/cidade.html
@@ -37,7 +37,7 @@
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a href="{% url 'home-cliente' %}">
                     <img src="{% static 'img/icon-park-solid_local-two.svg' %}" alt="Localização" class="cidade-icone">
                     <span class="cidade-nome">Pau dos Ferros / RN</span>
                 </a>
