Tela para visualizar agendamentos

--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -50,7 +50,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="#"> <img src="{% static 'img/footer-icon/calendar.svg' %}" alt="" class="nav-icon">
+                    <a href="{% url 'agendamento' %}"> <img src="{% static 'img/footer-icon/calendar.svg' %}" alt="" class="nav-icon">
                         <span class="nav-text">Agendamentos</span>
                     </a>
                 </li>
