--- a/core/static/css/admin.css
+++ b/core/static/css/admin.css
@@ -15,7 +15,7 @@
     gap: 10px;
     background-color: #fff;
     border: 1px solid #FF5A5A;
-    color: var(--brand-red);
+    color: #FF5A5A;
     border-radius: 12px;
     padding: 0.3rem 0.5rem;
     font-weight: 600;
@@ -159,7 +159,6 @@
     cursor: pointer;
     font-size: 0.6rem;
     font-weight: bold;
-    text-transform: uppercase;
     transition: background-color 0.3s ease, transform 0.1s ease;
 }
 
@@ -182,7 +181,6 @@
     cursor: pointer;
     font-size: 0.6rem;
     font-weight: bold;
-    text-transform: uppercase;
     transition: background-color 0.3s ease, transform 0.1s ease;
 }
 
@@ -195,6 +193,146 @@
     background-color: #2A6CCF;
     transform: translateY(1px);
 }
+
+/* TELA DETALHES SOLICITAÇÕES */
+
+.app-navbar {
+    display: none;
+    box-shadow: none;
+}
+
+.header-logo a{
+    text-decoration: none;
+}
+
+.profile-card {
+    background-color: var(--bg-white);
+    border-radius: 16px;
+    padding: 12px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
+}
+
+.profile-header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 24px;
+    width: 100%;
+}
+
+.profile-avatar {
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
+    object-fit: cover;
+    margin-bottom: 16px;
+    border: 2px solid var(--border-light);
+}
+
+.user-info-list {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    margin-bottom: 32px;
+}
+
+.text-tag {
+    color: #5D14A6;
+}
+
+.info-item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #f9f9f9;
+    border: 1px solid var(--border-light);
+    border-radius: 12px;
+    padding: 16px;
+    width: 100%;
+}
+
+.info-label-group {
+    display: flex;
+    align-items: center;
+    gap: 12px;
+}
+
+.info-icon {    
+    width: 20px;
+    height: 20px;
+}
+
+.info-label {
+    font-weight: 600;
+    color: var(--text-dark);
+    font-size: 16px;
+}
+
+.info-value {
+    font-size: 14px;
+    color: var(--text-light);
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 50%;
+}
+
+.block-btn {
+    display: flex;
+    justify-content: flex-end;
+    width: 100%;
+    align-items: center;
+    gap: 0.5rem;
+}
+
+.botao-recusar {
+    background-color: #dc3545;
+    color: white;
+    border: none;
+    border-radius: 0.3rem;
+    padding: 0.5rem 1rem;
+    cursor: pointer;
+    font-size: 0.8rem;
+    font-weight: bold;
+    text-transform: uppercase;
+    transition: background-color 0.3s ease, transform 0.1s ease;
+}
+
+.botao-recusar:hover {
+    background-color: #c82333;
+}
+
+.botao-recusar:active {
+    background-color: #bd2130;
+    transform: translateY(1px);
+}
+
+.botao-aceitar {
+    background-color: #46c20d;
+    color: white;
+    border: none;
+    border-radius: 0.3rem;
+    padding: 0.5rem 1rem;
+    cursor: pointer;
+    font-size: 0.8rem;
+    font-weight: bold;
+    text-transform: uppercase;
+    transition: background-color 0.3s ease, transform 0.1s ease;
+}
+
+.botao-aceitar:hover {
+    background-color: #3ca10d;
+}
+
+.botao-aceitar:active {
+    background-color: #5fda26;
+    transform: translateY(1px);
+}
+
 
 /* RESPONSIVIDADE (WEB / DESKTOP) */
 
