--- a/core/templates/core/admin/solicitacoes.html
+++ b/core/templates/core/admin/solicitacoes.html
@@ -20,8 +20,8 @@
 
 <section class="home-content">
     <div class="nav-tabs-container">
-        <button class="option-tab active">Solicitações</button>
-        <a href="#"><button class="option-tab inactive">Categorias</button></a>
+        <a href="{% url 'solicitacoes' %}"><button class="option-tab active">Solicitações</button></a>
+        <a href="{% url 'categorias' %}"><button class="option-tab inactive">Categorias</button></a>
     </div>
 
     <span class="text-tag">Solicitações Pendentes</span>
