--- a/core/templates/core/cidade.html
+++ b/core/templates/core/cidade.html
@@ -43,7 +43,7 @@
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a href="{% url 'home-cliente' %}">
                     <img src="{% static 'img/icon-park-solid_local-two.svg' %}" class="cidade-icone" alt="">
                     <span class="cidade-nome">Pau dos Ferros / RN</span>
                 </a>
