Cria a Tela Home Prestador

--- a/core/templates/core/busca.html
+++ b/core/templates/core/busca.html
@@ -22,7 +22,7 @@
             <img src="{%static 'img/categories/banner-barbearia.svg'%}" alt="barbearia" class="category-img">
             <img src="{%static 'img/categories/banner-barbearia.svg'%}" alt="barbearia" class="category-img">
             <img src="{%static 'img/categories/banner-barbearia.svg'%}" alt="barbearia" class="category-img">
-            <img src="{%static 'img/categories/banner-barbearia.svg'%}" alt="barbearia" class="category-img">>
+            <img src="{%static 'img/categories/banner-barbearia.svg'%}" alt="barbearia" class="category-img">
         </div>
     </div>
 </section>
