Cria a tela Finalizados Prestador

--- a/core/templates/core/home_prestador.html
+++ b/core/templates/core/home_prestador.html
@@ -22,7 +22,7 @@
         
         <div class="nav-tabs-container">
             <button class="option-tab active">EM ABERTO</button>
-            <a href="#"><button class="option-tab inactive">FINALIZADOS</button></a>
+            <a href="{% url 'home_finalizados' %}"><button class="option-tab inactive">FINALIZADOS</button></a>
         </div>
 
         <a href="#" class="link-hoje">
